syntax = "proto3";

import "message.proto";

message PushRequest {
  string pub_sub_topic = 1;
  WakuMessage message = 2;
}

message PushResponse {
  bool is_success = 1;
  string info = 2;
}

message PushRPC {
  string request_id = 1;
  optional PushRequest request = 2;
  optional PushResponse response = 3;
}
